# clothes-recommender

./: .gitignore  CMakeLists.txt  README.md
include/: Weather.h
src/: Weather.cpp  main.cpp
